--- a/src/app.css
+++ b/src/app.css
@@ -31,7 +31,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  /* display: flex; */
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -42,14 +42,14 @@ h1 {
   line-height: 1.1;
 }
 
-.card {
+/* .card {
   padding: 2em;
-}
+} */
 
 #app {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
