bottom padding on main and more color

--- a/src/app.css
+++ b/src/app.css
@@ -79,6 +79,10 @@ h1 {
   text-align: center;
 }
 
+main {
+  padding-bottom: 48px;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
